--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           <a class="brand" href="#">Android Tour Per&#250;</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Android Tour</a></li>
-              <li><a href="#programa">Programa</a></li>
-              <li><a href="#expositores">Expositores</a></li>
-              <li><a href="#sponsor">Sponsor</a></li>
-              <li><a href="#team">Colaboradores</a></li>
+              <li class="active"><a href="#" id="btnHome">Android Tour</a></li>
+              <li><a href="#programa" id="btnPrograma">Programa</a></li>
+              <li><a href="#expositores" id="btnSpeaker">Expositores</a></li>
+              <li><a href="#sponsor" id="btnSponsor">Sponsor</a></li>
+              <li><a href="#team" id="btnTeam">Colaboradores</a></li>
 
             </ul>
           </div><!--/.nav-collapse -->
@@ -107,6 +107,8 @@
     <script type="text/javascript" src="js/lib/easing/EasePack.min.js"></script>
     <script type="text/javascript" src="js/lib/easeljs-0.6.0.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenLite.min.js"></script>
+    <script type="text/javascript" src="js/Circle.js"></script>
+    <script type="text/javascript" src="js/UserImg.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
