--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Android Tour Per&#250;</a>
+          <a class="brand" href="#" id="home">GDG Lima</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#" id="btnHome">Android Tour</a></li>
-              <li><a href="#programa" id="btnPrograma">Programa</a></li>
+              <li><a href="#programa" id="btnProgram">Programa</a></li>
               <li><a href="#expositores" id="btnSpeaker">Expositores</a></li>
               <li><a href="#sponsor" id="btnSponsor">Sponsor</a></li>
               <li><a href="#team" id="btnTeam">Colaboradores</a></li>
@@ -58,6 +58,9 @@
           <canvas id="canvas" width="1170" height="350">
              alternate content
           </canvas>
+          <div id="pagecontent" width="1170" height="350">
+              Contenidos
+          </div>
        </div>
       <!-- Example row of columns -->
           <div class="row">
