Reverting to previous commit

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            </div>
             <div class="span4">
               <h2>Expositores</h2>
-              <p>Expositores ... mencionar aquí a David </p>
+              <p>Expositores .... mencionar aquí a David </p>
               <a  href="#">View details &raquo;</a>
             </div>
           </div>
