--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
+            <a class="brand"  href="http://www.gdglima.pe">GDGLima | www.gdglima.pe</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li class="active"><a href="nav_androidtour.html">Android Tour</a></li>
+                <li><a href="nav_androidtour.html">Android Tour</a></li>
                 <li><a href="nav_programa.html">Programa</a></li>
                 <li><a href="nav_speaker.html">Expositores</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
