--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
        <div class="hero-unit">
            <div id="pagecontent" width="1170" height="350">
            </div>
-          <canvas id="canvas" width="1170" height="350">
-             alternate content
+          <canvas id="canvas" width="1024" height="420">
+                       alternate content
           </canvas>
        </div>
       <!-- Example row of columns -->
@@ -109,8 +109,12 @@
     <script type="text/javascript" src="js/lib/easing/EasePack.min.js"></script>
     <script type="text/javascript" src="js/lib/easeljs-0.6.0.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenLite.min.js"></script>
-    <script type="text/javascript" src="js/Circle.js"></script>
+    <script type="text/javascript" src="js/lib/core/Utils.js"></script>
+    <script type="text/javascript" src="js/lib/core/Config.js"></script>
+    <script type="text/javascript" src="js/CircleAndroid.js"></script>
     <script type="text/javascript" src="js/UserImg.js"></script>
+    <script type="text/javascript" src="js/JoinLine.js"></script>
+    <script type="text/javascript" src="js/SocialApp.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
