--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
         </div><!-- /.navbar-wrapper -->
       </header>
 
-      <div class="hero-unit">
+      <!-- /* <div class="hero-unit">
         <div id="pagecontent" width="1170" height="350">
         </div>
         <canvas id="canvas" width="1170" height="350">
         </canvas>
-      </div>
+      </div> */ -->
 
     <div class="container">
       <!-- canvas -->
        <div class="hero-unit">
            <div id="pagecontent" width="1170" height="350">
            </div>
-          <canvas id="canvas" width="1024" height="420">
+          <canvas id="canvasapp" width="1024" height="420">
                        alternate content
           </canvas>
        </div>
