--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
       <div class="container" id="page-container">
-        <canvas id="canvas" width="1170" height="350">
+        <canvas id="canvasapp" width="1010" height="350">
         </canvas>
       </div>
 
