Agregada carga por url con #

--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
     {
       var nav_links =
       {
+        "#index" : "nav_androidtour.html",
         "#android-tour" : "nav_androidtour.html",
         "#programa" : "nav_programa.html",
         "#speaker" : "nav_speaker.html",
@@ -180,13 +181,33 @@
         "#team" : "nav_team.html"
       };
 
+      function loadURL(key)
+      {
+        if(key.length > 0 && nav_links[key] != undefined)
+        {
+          jQuery("#page-container").html("<img src='assets/img/loader.gif'>")
+          jQuery("#page-container").load(nav_links[key]);
+        }
+      }
+
       jQuery("ul.nav li a").click(function()
       {
-        var href = jQuery(this).attr("href");
-        console.log(href+" ; "+nav_links[href]);
-        jQuery("#page-container").html("<img src='assets/img/loader.gif'>")
-        jQuery("#page-container").load(nav_links[href]);
+        var key = jQuery(this).attr("href");
+        loadURL(key);
       });
+
+      var currentURL = String(document.location).split("#");
+      var key = jQuery.trim(currentURL[currentURL.length -1]);
+
+      if(key.length > 0)
+        key = "#"+key;
+
+      /*
+      if(currentURL.length > 1)
+        loadURL(key);
+      else
+        loadURL("#index");
+      */
 
     });
     </script>
