--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                   <span class="icon-bar"></span>
                 </button>
 
-                <a class="brand" href="http://www.gdglima.pe">Android Tour Per&uacute;</a>
+                <a class="brand" href="">Android Tour Per&uacute;</a>
 
                 <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
 
@@ -173,7 +173,6 @@
     {
       var nav_links =
       {
-        "#index" : "nav_androidtour.html",
         "#android-tour" : "nav_androidtour.html",
         "#programa" : "nav_programa.html",
         "#speaker" : "nav_speaker.html",
@@ -202,12 +201,9 @@
       if(key.length > 0)
         key = "#"+key;
 
-      /*
+      
       if(currentURL.length > 1)
         loadURL(key);
-      else
-        loadURL("#index");
-      */
 
     });
     </script>
