--- a/index.html
+++ b/index.html
@@ -112,22 +112,22 @@
           </div>
 
 
-      <!-- FOOTER -->
-      <footer>
+    <!-- FOOTER -->
+    <footer>
 
-        <p class="pull-right">
-          <a href="#">Twitter</a> |
-          <a href="#">Facebook</a> |
-          <a href="#">Google Plus</a> |
-          <a href="#">Back to top</a>
-        </p>
+      <p class="pull-left">
+        <a href="#">@2013 GDGLima</a>
+        <a href="#">#AndroidTourPeru</a>
+      </p>
 
-        <p>
-          <a href="#">@2013 GDGLima</a>
-          <a href="#">#AndroidTourPeru</a>
-        </p>
+      <p class="pull-right">
+        <a href="#">Twitter</a> |
+        <a href="#">Facebook</a> |
+        <a href="#">Google Plus</a> |
+        <a href="#">Back to top</a>
+      </p>
 
-      </footer>
+    </footer>
 
     <!-- Le javascript
     ================================================== -->
@@ -168,45 +168,7 @@
     <script src="assets/js/holder/holder.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
 
-    <script type="text/javascript">
-    jQuery(document).ready(function()
-    {
-      var nav_links =
-      {
-        "#android-tour" : "nav_androidtour.html",
-        "#programa" : "nav_programa.html",
-        "#speaker" : "nav_speaker.html",
-        "#sponsor" : "nav_sponsor.html",
-        "#team" : "nav_team.html"
-      };
-
-      function loadURL(key)
-      {
-        if(key.length > 0 && nav_links[key] != undefined)
-        {
-          jQuery("#page-container").html("<img src='assets/img/loader.gif'>")
-          jQuery("#page-container").load(nav_links[key]);
-        }
-      }
-
-      jQuery("ul.nav li a").click(function()
-      {
-        var key = jQuery(this).attr("href");
-        loadURL(key);
-      });
-
-      var currentURL = String(document.location).split("#");
-      var key = jQuery.trim(currentURL[currentURL.length -1]);
-
-      if(key.length > 0)
-        key = "#"+key;
-
-      
-      if(currentURL.length > 1)
-        loadURL(key);
-
-    });
-    </script>
+    <script type="text/javascript" src="js/navigation.js"></script>
 
   </body>
 </html>
