maquetado general y contenido

--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -1,1 +1,187 @@
-Android Tour Peru
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>GDGLima &middot; Android Tour Peru</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Eduardo Medina Alfaro">
+    <meta name="author" content="GDG Lima">
+    <meta name="email" content="emedinaa@gmail.com">
+
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
+  </head>
+
+  <body>
+
+    <header>
+        <!-- NAVBAR
+        ================================================== -->
+        <div class="navbar-wrapper">
+          <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+            <div class="navbar navbar-inverse">
+              <div class="navbar-inner">
+                <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
+
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+
+                <a class="brand" href="index.html">Android Tour Per&uacute;</a>
+
+                <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
+
+                <div class="nav-collapse collapse">
+
+                  <ul class="nav">
+
+                    <li>
+                      <a href="nav_androidtour.html" class="opcion1">
+                        Android Tour
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="nav_programa.html" class="opcion2">Programa</a>
+                    </li>
+
+                    <li>
+                      <a href="nav_speaker.html" class="opcion3">Speakers</a>
+                    </li>
+
+                    <li>
+                      <a href="nav_sponsor.html" class="opcion4">Sponsors</a>
+                    </li>
+
+                    <li>
+                      <a href="nav_team.html" class="opcion5">Colaboradores</a>
+                    </li>
+
+                  </ul>
+
+                </div><!--/.nav-collapse -->
+
+              </div><!-- /.navbar-inner -->
+            </div><!-- /.navbar -->
+        </div><!-- /.navbar-wrapper -->
+    </header>
+
+
+		<div class="row tour">
+	        <div class="span9 banner">
+	          <span>Android Tour</span>
+	        </div>
+		</div>
+	    <div class="hero headings">
+	        <h3>¿Que es el Android Tour?</h3>
+	    </div>
+
+
+    	<div class="row tours">
+	        <div class="offset1 span3">
+	          <img src="assets/images/figura-android.png">
+	        </div><!-- /.span4 -->
+	        <div class="span9">
+	        	<div class="row">
+
+	        		<div class="span9">
+	        			<p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824">+Google Developer Group - GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
+	        		</div>
+	        	</div>
+	        	<div class="row">
+
+	        		<div class="span9">
+	        			<p>Estos eventos tienen como objetivo reunir a los mejores expertos de la regi&oacute;n para que puedan compartir conocimiento y experiencias relacionados al mundo del desarrollo de aplicaciones para m&oacute;viles.</p>
+	        		</div>
+	        	</div>
+	        	<div class="row">
+
+	        		<div class="span9">
+	        			<p>Estos eventos ser&aacute;n realizados ante la llegada de <strong><a href="http://plus.google.com/102717421433762219474" target="_new">+David Chandler</a>, Developer Advocate de Google</strong>, expositor oficial del <b>Google I/O</b> y uno de los gurús más reconocidos en el mundo de Android, quien estar&aacute; visitando Per&uacute; por primera vez y podr&aacute;  compartir conocimiento y temas con la comunidad de desarrollo m&oacute;vil en Per&uacute;. </p>
+	        		</div>
+	        	</div>
+
+	        </div><!-- /.span4 -->
+      	</div><!-- /.row -->
+
+
+    <!-- FOOTER -->
+    <footer>
+
+      <p class="pull-left">
+        <a class="lead" href="#">@2013 GDGLima</a>
+        <a class="lead" href="#">#AndroidTourPeru</a>
+      </p>
+
+      <p class="pull-right">
+        <a href="#">Twitter</a> |
+        <a href="#">Facebook</a> |
+        <a href="#">Google Plus</a> |
+        <a href="#">Back to top</a>
+      </p>
+
+    </footer>
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap-transition.js"></script>
+    <script src="assets/js/bootstrap-alert.js"></script>
+    <script src="assets/js/bootstrap-modal.js"></script>
+    <script src="assets/js/bootstrap-dropdown.js"></script>
+    <script src="assets/js/bootstrap-scrollspy.js"></script>
+    <script src="assets/js/bootstrap-tab.js"></script>
+    <script src="assets/js/bootstrap-tooltip.js"></script>
+    <script src="assets/js/bootstrap-popover.js"></script>
+    <script src="assets/js/bootstrap-button.js"></script>
+    <script src="assets/js/bootstrap-collapse.js"></script>
+    <script src="assets/js/bootstrap-carousel.js"></script>
+    <script src="assets/js/bootstrap-typeahead.js"></script>
+
+    <script type="text/javascript" src="js/lib/jquery-1.6.4.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/twitter-search-api.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/easing/EasePack.min.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/easeljs-0.6.0.min.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/TweenLite.min.js"></script>
+    <script type="text/javascript" src="js/lib/core/Utils.js"></script>
+    <script type="text/javascript" src="js/lib/core/Config.js"></script>
+    <script type="text/javascript" src="js/CircleAndroid.js"></script>
+    <script type="text/javascript" src="js/UserImg.js"></script>
+    <script type="text/javascript" src="js/JoinLine.js"></script>
+    <script type="text/javascript" src="js/SocialApp.js"></script>
+    <script src="assets/js/holder/holder.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
+    <script type="text/javascript" src="js/navigation.js"></script>
+
+  </body>
+</html>
+
