--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
 
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-    
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
 
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
   </head>
 
   <body>
@@ -47,7 +46,7 @@
                   <span class="icon-bar"></span>
                 </button>
 
-                <a class="brand" href="">Android Tour Per&uacute;</a>
+                <a class="brand" href="index.html">Android Tour Per&uacute;</a>
 
                 <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
 
@@ -56,21 +55,21 @@
                   <ul class="nav">
 
                     <li>
-                      <a href="#android-tour" class="opcion1">
+                      <a href="nav_androidtour.html" class="opcion1">
                         Android Tour
                       </a>
                     </li>
 
                     <li>
-                      <a href="#programa" class="opcion2">Programa</a>
+                      <a href="nav_programa.html" class="opcion2">Programa</a>
                     </li>
 
                     <li>
-                      <a href="#speaker" class="opcion3">Speakers</a>
+                      <a href="nav_speaker.html" class="opcion3">Speakers</a>
                     </li>
 
                     <li>
-                      <a href="#sponsor" class="opcion4">Sponsors</a>
+                      <a href="nav_sponsor.html" class="opcion4">Sponsors</a>
                     </li>
 
                     <li>
@@ -87,13 +86,13 @@
       </header>
 
 
-      <div class="container" id="page-container">
+      <div class="container text-center" id="page-container">
         <canvas id="canvasapp" width="1010" height="400">
         </canvas>
       </div>
 
       <!-- Example row of columns -->
-          <div class="row">
+          <div class="row text-center">
             <div class="span4">
               <h2>Android Tour</h2>
               <p>¿Que es el Android Tour? </p>
