--- a/nav_programa.html
+++ b/nav_programa.html
@@ -1,1 +1,217 @@
-Programa
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>GDGLima &middot; Android Tour Peru</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Eduardo Medina Alfaro">
+    <meta name="author" content="GDG Lima">
+    <meta name="email" content="emedinaa@gmail.com">
+
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="assets/css/app.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
+
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
+
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
+
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
+
+    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
+
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
+  </head>
+
+  <body>
+
+    <header>
+        <!-- NAVBAR
+        ================================================== -->
+        <div class="navbar-wrapper">
+          <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
+            <div class="navbar navbar-inverse">
+              <div class="navbar-inner">
+                <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
+
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+
+                <a class="brand" href="index.html">Android Tour Per&uacute;</a>
+
+                <a class="brand" href="http://www.gdglima.pe">GDGLima</a>
+
+                <div class="nav-collapse collapse">
+
+                  <ul class="nav">
+
+                    <li>
+                      <a href="nav_androidtour.html" class="opcion1">
+                        Android Tour
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="nav_programa.html" class="opcion2">Programa</a>
+                    </li>
+
+                    <li>
+                      <a href="nav_speaker.html" class="opcion3">Speakers</a>
+                    </li>
+
+                    <li>
+                      <a href="nav_sponsor.html" class="opcion4">Sponsors</a>
+                    </li>
+
+                    <li>
+                      <a href="nav_team.html" class="opcion5">Colaboradores</a>
+                    </li>
+
+                  </ul>
+
+                </div><!--/.nav-collapse -->
+
+              </div><!-- /.navbar-inner -->
+            </div><!-- /.navbar -->
+        </div><!-- /.navbar-wrapper -->
+      </header>
+
+
+	<div class="row programa">
+        <div class="span9 banner">
+          <span>Programa</span>
+        </div>
+	</div>
+    <div class="hero headings">
+        <h3>Martes 02 de Abril 2013</h3>
+        <h3>De 3:00 hasta las 8:30 pm</h3>
+        <h4>Para aprovechar al máximo las sesiones, te invitamos a revisar las Recomendaciones técnicas elaboradas por los ponentes.</h4>
+    </div>
+
+    <div class="container speakers text-center">
+    	<table class="table table-bordered">
+    		<thead>
+				<tr>
+					<th>Hora</th>
+					<th>&nbsp;</th>
+				</tr>
+    		</thead>
+    		<tbody>
+				<tr>
+					<td>
+						<span>8:00 a 8:45</span>
+					</td>
+					<td>
+						<span>Recepción de asistentes</span>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span>9:00 a 9:30</span>
+					</td>
+					<td>
+						<span>Inauguraci&oacute;n</span>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span>9:30 a 10:00</span>
+					</td>
+					<td>
+						<span>Conferencia GDG Lima and Google DevRel</span>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span>10:00 a 10:20</span>
+					</td>
+					<td>
+						<span>Recepción de asistentes</span>
+					</td>
+				</tr>
+
+				<tr>
+					<td>
+						<span>10:20 a 11:00</span>
+					</td>
+					<td>
+						<span>Recepción de asistentes</span>
+					</td>
+				</tr>
+    		</tbody>
+    	</table>
+    </div>
+
+    <!-- FOOTER -->
+    <footer>
+
+      <p class="pull-left">
+        <a class="lead" href="#">@2013 GDGLima</a>
+        <a class="lead" href="#">#AndroidTourPeru</a>
+      </p>
+
+      <p class="pull-right">
+        <a href="#">Twitter</a> |
+        <a href="#">Facebook</a> |
+        <a href="#">Google Plus</a> |
+        <a href="#">Back to top</a>
+      </p>
+
+    </footer>
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="assets/js/jquery.js"></script>
+    <script src="assets/js/bootstrap-transition.js"></script>
+    <script src="assets/js/bootstrap-alert.js"></script>
+    <script src="assets/js/bootstrap-modal.js"></script>
+    <script src="assets/js/bootstrap-dropdown.js"></script>
+    <script src="assets/js/bootstrap-scrollspy.js"></script>
+    <script src="assets/js/bootstrap-tab.js"></script>
+    <script src="assets/js/bootstrap-tooltip.js"></script>
+    <script src="assets/js/bootstrap-popover.js"></script>
+    <script src="assets/js/bootstrap-button.js"></script>
+    <script src="assets/js/bootstrap-collapse.js"></script>
+    <script src="assets/js/bootstrap-carousel.js"></script>
+    <script src="assets/js/bootstrap-typeahead.js"></script>
+
+    <script type="text/javascript" src="js/lib/jquery-1.6.4.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/twitter-search-api.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/easing/EasePack.min.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/easeljs-0.6.0.min.js">
+    </script>
+
+    <script type="text/javascript" src="js/lib/TweenLite.min.js"></script>
+    <script type="text/javascript" src="js/lib/core/Utils.js"></script>
+    <script type="text/javascript" src="js/lib/core/Config.js"></script>
+    <script type="text/javascript" src="js/CircleAndroid.js"></script>
+    <script type="text/javascript" src="js/UserImg.js"></script>
+    <script type="text/javascript" src="js/JoinLine.js"></script>
+    <script type="text/javascript" src="js/SocialApp.js"></script>
+    <script src="assets/js/holder/holder.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
+    <script type="text/javascript" src="js/navigation.js"></script>
+
+  </body>
+</html>
+
