--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -86,7 +86,7 @@
     </header>
 
 <br><br>
-		<div class="row tour">
+		<div class="rowdroid tour">
 	        <div class="span9 banner">
 	          <span>Android Tour</span>
 	        </div>
@@ -122,7 +122,7 @@
 
 	        </div><!-- /.span4 -->
       	</div><!-- /.row -->
-
+<br><br>
 
     <!-- FOOTER -->
     <footer>
