--- a/nav_programa.html
+++ b/nav_programa.html
@@ -86,7 +86,7 @@
       </header>
 
 <br><br>
-	<div class="row programa">
+	<div class="rowdroid programa">
         <div class="span9 banner">
           <span>Programa</span>
         </div>
@@ -154,6 +154,7 @@
     	</table>
     </div>
 
+<br><br>
     <!-- FOOTER -->
     <footer>
 
