--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -86,7 +86,7 @@
     </header>
 
 <br><br>
-  	<div class="row speaker">
+  	<div class="rowdroid speaker">
           <div class="span9 banner">
             <span>Speaker</span>
           </div>
@@ -124,6 +124,8 @@
         </div>
     	</div><!-- /.row -->
     </div>
+
+    <br><br>
 
     <!-- FOOTER -->
     <footer>
