--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -86,7 +86,7 @@
       </header>
 
 <br><br>
-	<div class="row sponsor">
+	<div class="rowdroid sponsor">
         <div class="span9 banner">
           <span>Sponsor</span>
         </div>
@@ -117,6 +117,7 @@
     	</div><!-- /.row -->
     </div>
 
+<br><br>
     <!-- FOOTER -->
     <footer>
 
