--- a/nav_team.html
+++ b/nav_team.html
@@ -86,7 +86,7 @@
       </header>
 
 <br><br>
-	<div class="row team">
+	<div class="rowdroid team">
         <div class="span9 banner">
           <span>Colaboradores</span>
         </div>
@@ -126,6 +126,7 @@
     	</div><!-- /.row -->
     </div>
 
+<br><br>
     <!-- FOOTER -->
     <footer>
 
