--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -103,25 +103,45 @@
 	        <div class="span9">
 	        	<div class="row">
 
-	        		<div class="span9">
-	        			<p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824">+Google Developer Group - GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
+	        		<div class="spanportada"><br>
+	        			<p> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<b>GDG Android Tour Per&uacute;</b> </p>
 	        		</div>
 	        	</div>
-	        	<div class="row">
+	        
 
-	        		<div class="span9">
-	        			<p>Estos eventos tienen como objetivo reunir a los mejores expertos de la regi&oacute;n para que puedan compartir conocimiento y experiencias relacionados al mundo del desarrollo de aplicaciones para m&oacute;viles.</p>
-	        		</div>
-	        	</div>
-	        	<div class="row">
-
-	        		<div class="span9">
-	        			<p>Estos eventos ser&aacute;n realizados ante la llegada de <strong><a href="http://plus.google.com/102717421433762219474" target="_new">+David Chandler</a>, Developer Advocate de Google</strong>, expositor oficial del <b>Google I/O</b> y uno de los gurús más reconocidos en el mundo de Android, quien estar&aacute; visitando Per&uacute; por primera vez y podr&aacute;  compartir conocimiento y temas con la comunidad de desarrollo m&oacute;vil en Per&uacute;. </p>
-	        		</div>
+	        		
 	        	</div>
 
 	        </div><!-- /.span4 -->
       	</div><!-- /.row -->
+
+<div class="row tours">
+          <div class="offset1 span3">
+            <img src="assets/images/davidchandler.jpg" class="img-circle">
+          </div><!-- /.span4 -->
+          <div class="span9">
+            <div class="row">
+
+              <div class="span9">
+                <p>El <b>GDG Android Tour Per&uacute;</b> es un conjunto de eventos gratuitos que son organizados por la comunidad <b><a href="http://plus.google.com/106035957065756239824">+Google Developer Group - GDG Lima</a></b> y <b> <a href="http://plus.google.com/117950001026140632430/">+GDG Arequipa</a></b> que buscan difundir el ecosistema de desarrollo y emprendimiento m&oacute;vil utilizando Android en Per&uacute;.</p>
+              </div>
+            </div>
+            <div class="row">
+
+              <div class="span9">
+                <p>Estos eventos tienen como objetivo reunir a los mejores expertos de la regi&oacute;n para que puedan compartir conocimiento y experiencias relacionados al mundo del desarrollo de aplicaciones para m&oacute;viles.</p>
+              </div>
+            </div>
+            <div class="row">
+
+              <div class="span9">
+                <p>Estos eventos ser&aacute;n realizados ante la llegada de <strong><a href="http://plus.google.com/102717421433762219474" target="_new">+David Chandler</a>, Developer Advocate de Google</strong>, expositor oficial del <b>Google I/O</b> y uno de los gurús más reconocidos en el mundo de Android, quien estar&aacute; visitando Per&uacute; por primera vez y podr&aacute;  compartir conocimiento y temas con la comunidad de desarrollo m&oacute;vil en Per&uacute;. </p>
+              </div>
+            </div>
+
+          </div><!-- /.span4 -->
+        </div><!-- /.row -->
+
 <br><br>
 
     <!-- FOOTER -->
