Seccion Android Tour Peru
Seccion Android Tour Peru

--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -98,7 +98,7 @@
 
     	<div class="row tours">
 	        <div class="offset1 span3">
-	          <img src="assets/images/figura-android.png">
+	          <img src="assets/images/GDGLimaLogo.png" class="img-circle">
 	        </div><!-- /.span4 -->
 	        <div class="span9">
 	        	<div class="row">
