--- a/nav_team.html
+++ b/nav_team.html
@@ -12,6 +12,11 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
 
+    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/common.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
+    <script type="text/javascript" src="assets/js/modernizr.custom.79639.js"></script> 
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="../assets/js/html5shiv.js"></script>
@@ -96,6 +101,48 @@
         <h4>Equipo organizador del evento.</h4>
     </div>
 
+<div class="container2">
+      <section class="main">
+         <ul class="ch-grid">
+          <li>
+            <div class="ch-item ch-img-1">
+              <div class="ch-info">
+               <h3>Eduardo</h3>
+                <p>Medina Alfaro <a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-2">
+              <div class="ch-info">
+                <h3>Manuel</h3>
+                <p>Rivera Cuzco<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-3">
+              <div class="ch-info">
+                <h3>Carlos</h3>
+                <p>Piñan Indacochea <a href="http://drbl.in/eNXY">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-4">
+              <div class="ch-info">
+                <h3>Alévandië</h3>
+                <p>Urbina Lopez <a href="http://drbl.in/eODP">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+        </ul>
+        
+      </section>
+      
+        </div>
+
+
     <div class="container text-center">
     	<div class="row teams">
 
@@ -118,13 +165,15 @@
 	        </div><!-- /.span4 -->
 
 	        <div class="span3">
-	        	<img src="assets/images/nicolas.jpg"  alt="" class="img-circle">
+	        	<img src="assets/images/alevandie.jpg"  alt="" class="img-circle">
 	        	<h4>Nicolas Bortolotti</h4>
 	        	<h5>Manager DevRel Google</h5>
 	        </div><!-- /.span4 -->
 
     	</div><!-- /.row -->
     </div>
+
+   
 
 <br><br>
     <!-- FOOTER -->
