Seccion Colaboradores done
done

--- a/nav_team.html
+++ b/nav_team.html
@@ -132,10 +132,101 @@
             <div class="ch-item ch-img-4">
               <div class="ch-info">
                 <h3>Alévandië</h3>
-                <p>Urbina Lopez <a href="http://drbl.in/eODP">GDGLima</a></p>
+                <p>Urbina López <a href="http://drbl.in/eODP">GDGLima</a></p>
               </div>
             </div>
           </li>
+<br>
+
+ <li>
+            <div class="ch-item ch-img-5">
+              <div class="ch-info">
+               <h3>Juan Jose</h3>
+                <p>Rodríguez<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-6">
+              <div class="ch-info">
+                <h3>Roxana</h3>
+                <p>Panaqué Cávana<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-7">
+              <div class="ch-info">
+                <h3>Maria Jose</h3>
+                <p>Torres Martijena<a href="http://drbl.in/eNXY">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-8">
+              <div class="ch-info">
+                <h3>Wendy</h3>
+                <p>Morales Yovera<a href="http://drbl.in/eODP">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+
+<br>
+
+ <li>
+            <div class="ch-item ch-img-9">
+              <div class="ch-info">
+               <h3>Zherly</h3>
+                <p>Vega<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-10">
+              <div class="ch-info">
+                <h3>Lennon</h3>
+                <p>Shimokawa<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-11">
+              <div class="ch-info">
+                <h3>Jhoon</h3>
+                <p>Saravia<a href="http://drbl.in/eNXY">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-12">
+              <div class="ch-info">
+                <h3>Alvaro</h3>
+                <p>Gonzales Lluncor<a href="http://drbl.in/eODP">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+
+          <br>
+
+ <li>
+            <div class="ch-item ch-img-13">
+              <div class="ch-info">
+               <h3>Hansy</h3>
+                <p>Schmitt Camacho<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="ch-item ch-img-14">
+              <div class="ch-info">
+                <h3>Meison</h3>
+                <p>Chirinos<a href="http://drbl.in/eNXW">GDGLima</a></p>
+              </div>
+            </div>
+          </li>
+         
+
+
         </ul>
         
       </section>
@@ -143,6 +234,7 @@
         </div>
 
 
+<!--
     <div class="container text-center">
     	<div class="row teams">
 
@@ -150,32 +242,32 @@
 	        	<img src="assets/images/nicolas.jpg"  alt="" class="img-circle">
 	        	<h4>Nicolas Bortolotti</h4>
 	        	<h5>Manager DevRel Google</h5>
-	        </div><!-- /.span4 -->
+	        </div>
 
 	        <div class="span3">
 				<img src="assets/images/nicolas.jpg"  alt="" class="img-circle">
 	        	<h4>Nicolas Bortolotti</h4>
 	        	<h5>Manager DevRel Google</h5>
-	        </div><!-- /.span4 -->
+	        </div>
 
 	        <div class="span3">
 				<img src="assets/images/nicolas.jpg"  alt="" class="img-circle">
 	        	<h4>Nicolas Bortolotti</h4>
 	        	<h5>Manager DevRel Google</h5>
-	        </div><!-- /.span4 -->
+	        </div>
 
 	        <div class="span3">
-	        	<img src="assets/images/alevandie.jpg"  alt="" class="img-circle">
+	        	<img src="assets/images/nicolas.jpg"  alt="" class="img-circle">
 	        	<h4>Nicolas Bortolotti</h4>
 	        	<h5>Manager DevRel Google</h5>
-	        </div><!-- /.span4 -->
+	        </div>
 
-    	</div><!-- /.row -->
+    	</div>
     </div>
 
-   
+   -->
 
-<br><br>
+<br><br><br><br>
     <!-- FOOTER -->
     <footer>
 
