--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -26,7 +26,7 @@
 
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
 
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <link rel="shortcut icon" href="assets/ico/android.png">
   </head>
 
   <body>
