--- a/nav_androidtour.html
+++ b/nav_androidtour.html
@@ -86,7 +86,7 @@
     </header>
 
 <br><br>
-		<div class="rowdroid tour">
+		<div id="divandroid"class="rowdroid tour">
 	        <div class="span9 banner">
 	          <span>Android Tour</span>
 	        </div>
