--- a/nav_programa.html
+++ b/nav_programa.html
@@ -86,7 +86,7 @@
       </header>
 
 <br><br>
-	<div class="rowdroid programa">
+	<div id="divandroid" class="rowdroid programa">
         <div class="span9 banner">
           <span>Programa</span>
         </div>
