--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -86,7 +86,7 @@
     </header>
 
 <br><br>
-  	<div class="rowdroid speaker">
+  	<div id="divandroid" class="rowdroid speaker">
           <div class="span9 banner">
             <span>Speaker</span>
           </div>
