--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -86,7 +86,7 @@
       </header>
 
 <br><br>
-	<div class="rowdroid sponsor">
+	<div id="divandroid" class="rowdroid sponsor">
         <div class="span9 banner">
           <span>Sponsor</span>
         </div>
