--- a/nav_team.html
+++ b/nav_team.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/common.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
-    <script type="text/javascript" src="assets/js/modernizr.custom.79639.js"></script> 
+    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -92,7 +92,7 @@
       </header>
 
 <br><br>
-	<div class="rowdroid team">
+	<div id="divandroid" class="rowdroid team">
         <div class="span9 banner">
           <span>Colaboradores</span>
         </div>
@@ -342,6 +342,7 @@
 
     <script type="text/javascript" src="js/lib/jquery-1.6.4.js">
     </script>
+     <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
 
     <script type="text/javascript" src="js/lib/twitter-search-api.js">
     </script>
