--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="assets/css/app.css" rel="stylesheet">
 
-    <link href="assets/css/puredroid.css" rel="stylesheet">
-
 
    <link rel="stylesheet" type="text/css" href="assets/css/demo.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/common.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/style2.css" />
-    <script type="text/javascript" src="assets/js/modernizr.custom.79639.js"></script> 
+    <script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
