--- a/nav_sponsor.html
+++ b/nav_sponsor.html
@@ -138,41 +138,20 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
-
-    <script type="text/javascript" src="js/lib/jquery-1.6.4.js">
+    <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js">
     </script>
-
+    <script type="text/javascript" src="js/lib/bootstrap.js">
+    </script>    
+    <script src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
     <script type="text/javascript" src="js/lib/twitter-search-api.js">
     </script>
-
     <script type="text/javascript" src="js/lib/easing/EasePack.min.js">
     </script>
-
     <script type="text/javascript" src="js/lib/easeljs-0.6.0.min.js">
     </script>
-
     <script type="text/javascript" src="js/lib/TweenLite.min.js"></script>
-    <script type="text/javascript" src="js/lib/core/Utils.js"></script>
-    <script type="text/javascript" src="js/lib/core/Config.js"></script>
-    <script type="text/javascript" src="js/CircleAndroid.js"></script>
-    <script type="text/javascript" src="js/UserImg.js"></script>
-    <script type="text/javascript" src="js/JoinLine.js"></script>
-    <script type="text/javascript" src="js/SocialApp.js"></script>
     <script src="assets/js/holder/holder.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
 
     <script type="text/javascript" src="js/navigation.js"></script>
 
