--- a/index.html
+++ b/index.html
@@ -180,23 +180,11 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap-transition.js"></script>
-    <script src="assets/js/bootstrap-alert.js"></script>
-    <script src="assets/js/bootstrap-modal.js"></script>
-    <script src="assets/js/bootstrap-dropdown.js"></script>
-    <script src="assets/js/bootstrap-scrollspy.js"></script>
-    <script src="assets/js/bootstrap-tab.js"></script>
-    <script src="assets/js/bootstrap-tooltip.js"></script>
-    <script src="assets/js/bootstrap-popover.js"></script>
-    <script src="assets/js/bootstrap-button.js"></script>
-    <script src="assets/js/bootstrap-collapse.js"></script>
-    <script src="assets/js/bootstrap-carousel.js"></script>
-    <script src="assets/js/bootstrap-typeahead.js"></script>
 
-    <script type="text/javascript" src="js/lib/jquery-1.6.4.js">
+    <script type="text/javascript" src="js/lib/jquery-1.9.1.min.js">
     </script>
-
+    <script type="text/javascript" src="js/lib/bootstrap.js">
+    </script>   
     <script type="text/javascript" src="js/lib/twitter-search-api.js">
     </script>
 
